Adds email notifications with SendGrid

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,9 @@ TWILIO_NUMBER=
 
 # Mongo URI, e.g.: mongodb://localhost:27017/eta-notifications-node
 MONGO_URI=
+
+# Email address that is verified or domain authenticated with SendGrid
+SENDGRID_EMAIL=
+
+# A SendGrid API key that has permission to send emails
+SENDGRID_API_KEY=
