--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node": ">=4.1.0 <5.5.0"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.4.2",
     "body-parser": "~1.19.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
