--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "NODE_ENV=test TWILIO_ACCOUNT_SID=ACXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX TWILIO_AUTH_TOKEN=1a23456b78901c234a5f67a1234567bc TWILIO_NUMBER=+13362589835 MONGO_URI=mongodb://localhost:27017/eta-notifications-node ./node_modules/.bin/mocha test --exit"
+    "test": "NODE_ENV=test TWILIO_ACCOUNT_SID=ACXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX TWILIO_AUTH_TOKEN=1a23456b78901c234a5f67a1234567bc TWILIO_NUMBER=+13362589835 MONGO_URI=mongodb://localhost:27017/eta-notifications-node SENDGRID_API_KEY=SG.xxx.yyy SENDGRID_EMAIL=test@example.com ./node_modules/.bin/mocha test --exit"
   },
   "license": "MIT",
   "repository": {
